		 Container.RegisterCollection(Type, IEnumerable<Assembly>) overloads for batch registration. (fixes #7)
	    -[Core] Added Container.GetTypesToRegister method for batch registration. (fixes #7)
		-[Core] Added Container.RegisterInstance overloads as replacement for RegisterSingle overloads that
		 take in an instance (fixes #44).

	Breaking Changes:
		-[Core] IConstructorVerificationBehavior merged with IConstructorVerificationBehavior (fixes #2).
		-[Core] Constructor overload 'Container(ContainerOptions)' removed from Container (fixes #40).
		-[Core] Made ScopedLifestyle.WhenScopeEnds method non-virtual (fixes #11).
		-[Core] Made ScopedLifestyle.RegisterForDisposal method non-virtual (fixes #11).
		-[Core] Made ScopedLifestyle.CreateCurrentScopeProvider method abstract (fixes #11).
		-[Core] Removed ScopedLifestyle.DisposeInstances method (fixes #11).
		-[Core] Removed Container.InjectProperties method (fixes #12).
		-[Core] Removed the Container.RegisterSingle<TConcrete>() method (fixes #44).
		-[Core] Removed the Container.RegisterSingle<TService, TImplementation>() method (fixes #44).
		-[Core] Removed the Container.RegisterSingle<TService>(TService) method (fixes #44).
		-[Core] Removed the Container.RegisterSingle<TService>(Func<TService>) method (fixes #44).
		-[Core] Removed the Container.RegisterSingle(Type, Type) method (fixes #44).
		-[Core] Removed the Container.RegisterSingle(Type, Func<object>) method (fixes #44).
		-[Core] Removed the Container.RegisterSingle(Type, object) method (fixes #44).
		-[Core] Container.RegisterAll methods renamed to Container.RegisterCollection (fixes #42).
		-[Core] Moved DecoratorPredicateContext class to the SimpleInjector root namespace (fixes #7).
		-[Core] Moved DecoratorContext to the SimpleInjector root namespace (fixes #7).
		-[Core] Removed RegisterSingleDecorator extension methods (fixed #7).
		-[Core] Removed RegisterAllOpenGeneric extension methods (fixes #7).